syntax = "proto3";

// How many language options might be useful?
option java_multiple_files = true;
option java_package = "org.opencoredata.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";

package helloworld;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
   // Sends another greeting
  rpc SayHelloAgain (HelloRequest) returns (HelloReply) {}
  
    rpc YAMLToSchema (YAMLFacilityMeta) returns (SchemaorgFacilityMeta) {}

}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

// below here are some extension tests.  
// Test 1, send in a YAML file, get back a JSON-LD version of 
// it encoded in schema.org + extensions
// service FacilityMetadata {
//   rpc YAMLToSchema (YAMLFacilityMeta) returns (SchemaorgFacilityMeta) {}
// }

message YAMLFacilityMeta {
  string yaml = 1;
}

message SchemaorgFacilityMeta {
  string schemaorg = 1;
}
